--- a/PyLabel/data-labeling.html
+++ b/PyLabel/data-labeling.html
@@ -52,7 +52,11 @@
                 </div>
             </div>
             <div class="preview-section__image">
-                <img src="img/preview.png" alt="" class="img-fluid">
+                <picture> 
+                    <source srcset="img/preview.webp" type="image/webp"> 
+                    <source srcset="img/preview.png" type="image/png"> 
+                    <img class="img-fluid" src="img/preview.png"  alt=""> 
+                </picture>
             </div>
         </div>
         <!-- /preview -->
@@ -92,7 +96,11 @@
                         </div>
                         <div class="col-lg-4 ps-xxl-5 text_center-sm pt-1 pt-md-0">
                             <p class="text_light">Rendering synthetic data</p>
-                            <img src="img/face.png" alt="" class="img-fluid d-inline-block">
+                            <picture class="img-fluid d-inline-block"> 
+                                <source srcset="img/face.webp" type="image/webp"> 
+                                <source srcset="img/face.png" type="image/png"> 
+                                <img class="img-fluid" src="img/face.png"  alt=""> 
+                            </picture>
                         </div>
                     </div>
                 </div>
@@ -340,7 +348,13 @@
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <div class="team-item">
-                                <div class="team-item__image"><img src="img/content/user-5.jpg" alt=""></div>
+                                <div class="team-item__image">
+                                    <picture> 
+                                        <source srcset="img/content/user-5.webp" type="image/webp"> 
+                                        <source srcset="img/content/user-5.jpg" type="image/jpeg"> 
+                                        <img class="img-fluid" src="img/content/user-5.jpg"  alt=""> 
+                                    </picture>
+                                </div>
                                 <div class="team-item__name text_styling text_semibold">Ricardo Antwell</div>
                                 <p class="text_styling text_mediumbold text_size-sm">Chief Data Scientist at SuperML Inc.</p>
                                 <p>The head of internal markup teams, responsible for the management of curators, building processes in the company.</p>
@@ -348,7 +362,13 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="team-item">
-                                <div class="team-item__image"><img src="img/content/user-5.jpg" alt=""></div>
+                                <div class="team-item__image">
+                                    <picture> 
+                                        <source srcset="img/content/user-5.webp" type="image/webp"> 
+                                        <source srcset="img/content/user-5.jpg" type="image/jpeg"> 
+                                        <img class="img-fluid" src="img/content/user-5.jpg"  alt=""> 
+                                    </picture>
+                                </div>
                                 <div class="team-item__name text_styling text_semibold">Ricardo Antwell</div>
                                 <p class="text_styling text_mediumbold text_size-sm">Chief Data Scientist at SuperML Inc.</p>
                                 <p>The head of internal markup teams, responsible for the management of curators, building processes in the company.</p>
@@ -356,7 +376,13 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="team-item">
-                                <div class="team-item__image"><img src="img/content/user-5.jpg" alt=""></div>
+                                <div class="team-item__image">
+                                    <picture> 
+                                        <source srcset="img/content/user-5.webp" type="image/webp"> 
+                                        <source srcset="img/content/user-5.jpg" type="image/jpeg"> 
+                                        <img class="img-fluid" src="img/content/user-5.jpg"  alt=""> 
+                                    </picture>
+                                </div>
                                 <div class="team-item__name text_styling text_semibold">Ricardo Antwell</div>
                                 <p class="text_styling text_mediumbold text_size-sm">Chief Data Scientist at SuperML Inc.</p>
                                 <p>The head of internal markup teams, responsible for the management of curators, building processes in the company.</p>
@@ -364,7 +390,13 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="team-item">
-                                <div class="team-item__image"><img src="img/content/user-5.jpg" alt=""></div>
+                                <div class="team-item__image">
+                                    <picture> 
+                                        <source srcset="img/content/user-5.webp" type="image/webp"> 
+                                        <source srcset="img/content/user-5.jpg" type="image/jpeg"> 
+                                        <img class="img-fluid" src="img/content/user-5.jpg"  alt=""> 
+                                    </picture>
+                                </div>
                                 <div class="team-item__name text_styling text_semibold">Ricardo Antwell</div>
                                 <p class="text_styling text_mediumbold text_size-sm">Chief Data Scientist at SuperML Inc.</p>
                                 <p>The head of internal markup teams, responsible for the management of curators, building processes in the company.</p>
@@ -372,7 +404,13 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="team-item">
-                                <div class="team-item__image"><img src="img/content/user-5.jpg" alt=""></div>
+                                <div class="team-item__image">
+                                    <picture> 
+                                        <source srcset="img/content/user-5.webp" type="image/webp"> 
+                                        <source srcset="img/content/user-5.jpg" type="image/jpeg"> 
+                                        <img class="img-fluid" src="img/content/user-5.jpg"  alt=""> 
+                                    </picture>
+                                </div>
                                 <div class="team-item__name text_styling text_semibold">Ricardo Antwell</div>
                                 <p class="text_styling text_mediumbold text_size-sm">Chief Data Scientist at SuperML Inc.</p>
                                 <p>The head of internal markup teams, responsible for the management of curators, building processes in the company.</p>
@@ -380,7 +418,13 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="team-item">
-                                <div class="team-item__image"><img src="img/content/user-5.jpg" alt=""></div>
+                                <div class="team-item__image">
+                                    <picture> 
+                                        <source srcset="img/content/user-5.webp" type="image/webp"> 
+                                        <source srcset="img/content/user-5.jpg" type="image/jpeg"> 
+                                        <img class="img-fluid" src="img/content/user-5.jpg"  alt=""> 
+                                    </picture>
+                                </div>
                                 <div class="team-item__name text_styling text_semibold">Ricardo Antwell</div>
                                 <p class="text_styling text_mediumbold text_size-sm">Chief Data Scientist at SuperML Inc.</p>
                                 <p>The head of internal markup teams, responsible for the management of curators, building processes in the company.</p>
@@ -388,7 +432,13 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="team-item">
-                                <div class="team-item__image"><img src="img/content/user-5.jpg" alt=""></div>
+                                <div class="team-item__image">
+                                    <picture> 
+                                        <source srcset="img/content/user-5.webp" type="image/webp"> 
+                                        <source srcset="img/content/user-5.jpg" type="image/jpeg"> 
+                                        <img class="img-fluid" src="img/content/user-5.jpg"  alt=""> 
+                                    </picture>
+                                </div>
                                 <div class="team-item__name text_styling text_semibold">Ricardo Antwell</div>
                                 <p class="text_styling text_mediumbold text_size-sm">Chief Data Scientist at SuperML Inc.</p>
                                 <p>The head of internal markup teams, responsible for the management of curators, building processes in the company.</p>
@@ -396,7 +446,13 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="team-item">
-                                <div class="team-item__image"><img src="img/content/user-5.jpg" alt=""></div>
+                                <div class="team-item__image">
+                                    <picture> 
+                                        <source srcset="img/content/user-5.webp" type="image/webp"> 
+                                        <source srcset="img/content/user-5.jpg" type="image/jpeg"> 
+                                        <img class="img-fluid" src="img/content/user-5.jpg"  alt=""> 
+                                    </picture>
+                                </div>
                                 <div class="team-item__name text_styling text_semibold">Ricardo Antwell</div>
                                 <p class="text_styling text_mediumbold text_size-sm">Chief Data Scientist at SuperML Inc.</p>
                                 <p>The head of internal markup teams, responsible for the management of curators, building processes in the company.</p>
