--- a/PyLabel/project.html
+++ b/PyLabel/project.html
@@ -45,11 +45,23 @@
                 <div class="title_size-md text_center title title_margin-bottom-md">Project 1</div>
                 <div class="title_size-sm-mobile title title_margin-bottom-sm">Introduction</div>
                 <p>The ML Team at Scale hosts a weekly reading groups where members choose papers from the broad AI/ML community and discuss them ranging from topics in Computer Vision to NLP to Active Learning. Here, we describe a brief summary of some of the insights we gained from various papers and how we aim to use some of that knowledge in future research projects and applications to Scale AI’s business. The ML Team at Scale hosts a weekly reading groups where members choose papers from the broad AI/ML community and discuss them ranging from topics in Computer Vision to NLP to Active Learning. Here, we describe a brief summary of some of the insights we gained from various papers and how we aim to use some of that knowledge in future research projects and applications to Scale AI’s business. The ML Team at Scale hosts a weekly reading groups where members choose papers from the broad AI/ML community and discuss them ranging from topics in Computer Vision to NLP to Active Learning. Here, we describe a brief summary of some of the insights we gained from various papers and how we aim to use some of that knowledge in future research projects and applications to Scale AI’s business.</p>
-                <div class="image-block"><img src="img/content/project-1.jpg" alt="" class="d-block w-100 img-fluid"></div>
+                <div class="image-block">
+                    <picture class="d-block w-100 img-fluid"> 
+                        <source srcset="img/content/project-1.webp" type="image/webp"> 
+                        <source srcset="img/content/project-1.jpg" type="image/jpeg"> 
+                        <img class="img-fluid" src="img/content/project-1.jpg"  alt=""> 
+                    </picture>
+                </div>
                 <p>The ML Team at Scale hosts a weekly reading groups where members choose papers from the broad AI/ML community and discuss them ranging from topics in Computer Vision to NLP to Active Learning. Here, we describe a brief summary of some of the insights we gained from various papers and how we aim to use some of that knowledge in future research projects and applications to Scale AI’s business.</p>
                 <div class="title_size-sm-mobile title title_margin-bottom-sm">Thank you</div>
                 <p>Dima Choklya Kirill Lukoyanov for reading this for turning this into reality. Dima Choklya Kirill Lukoyanov for reading this for turning this into reality. Dima Choklya Kirill Lukoyanov for reading this for turning this into reality. Dima Choklya Kirill Lukoyanov for reading this for turning this into reality. Dima Choklya Kirill Lukoyanov for reading this for turning this into reality. Dima Choklya Kirill Lukoyanov for reading this for turning this into reality. Dima Choklya Kirill Lukoyanov for reading this for turning this into reality. Dima Choklya Kirill Lukoyanov for reading this for turning this into reality.</p>
-                <div class="image-block"><img src="img/content/project-1.jpg" alt="" class="d-block w-100 img-fluid"></div>
+                <div class="image-block">
+                    <picture class="d-block w-100 img-fluid"> 
+                        <source srcset="img/content/project-1.webp" type="image/webp"> 
+                        <source srcset="img/content/project-1.jpg" type="image/jpeg"> 
+                        <img class="img-fluid" src="img/content/project-1.jpg"  alt=""> 
+                    </picture>
+                </div>
                 <div class="title_size-sm-mobile title title_margin-bottom-sm">Thank you</div>
                 <p>Dima Choklya Kirill Lukoyanov for reading this for turning this into reality. Dima Choklya Kirill Lukoyanov for reading this for turning this into reality. Dima Choklya Kirill Lukoyanov for reading this for turning this into reality. Dima Choklya Kirill Lukoyanov for reading this for turning this into reality. Dima Choklya Kirill Lukoyanov for reading this for turning this into reality. Dima Choklya Kirill Lukoyanov for reading this for turning this into reality. Dima Choklya Kirill Lukoyanov for reading this for turning this into reality. Dima Choklya Kirill Lukoyanov for reading this for turning this into reality.</p>
             </div>
