--- a/PyLabel/сomputer-vision.html
+++ b/PyLabel/сomputer-vision.html
@@ -48,7 +48,13 @@
                 </div>
             </div>
             <div class="d-lg-flex info-block">
-                <div class="info-block__image order-md-2"><img src="img/content/info-block.jpg" alt=""></div>
+                <div class="info-block__image order-md-2">
+                    <picture> 
+                        <source srcset="img/content/info-block.webp" type="image/webp"> 
+                        <source srcset="img/content/info-block.jpg" type="image/jpeg"> 
+                        <img class="img-fluid" src="img/content/info-block.jpg"  alt=""> 
+                    </picture>
+                </div>
                 <div class="info-block__text">
                     <div class="info-block__content">
                         <div class="title title_size-mlg title_margin-bottom-md">Extensive experience in computer vision, AR/VR development.</div>
@@ -229,7 +235,13 @@
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <div class="team-item">
-                                <div class="team-item__image"><img src="img/content/user-5.jpg" alt=""></div>
+                                <div class="team-item__image">
+                                    <picture> 
+                                        <source srcset="img/content/user-5.webp" type="image/webp"> 
+                                        <source srcset="img/content/user-5.jpg" type="image/jpeg"> 
+                                        <img class="img-fluid" src="img/content/user-5.jpg"  alt=""> 
+                                    </picture>
+                                </div>
                                 <div class="team-item__name text_styling text_semibold">Ricardo Antwell</div>
                                 <p class="text_styling text_mediumbold text_size-sm">Chief Data Scientist at SuperML Inc.</p>
                                 <p>The head of internal markup teams, responsible for the management of curators, building processes in the company.</p>
@@ -237,7 +249,13 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="team-item">
-                                <div class="team-item__image"><img src="img/content/user-5.jpg" alt=""></div>
+                                <div class="team-item__image">
+                                    <picture> 
+                                        <source srcset="img/content/user-5.webp" type="image/webp"> 
+                                        <source srcset="img/content/user-5.jpg" type="image/jpeg"> 
+                                        <img class="img-fluid" src="img/content/user-5.jpg"  alt=""> 
+                                    </picture>
+                                </div>
                                 <div class="team-item__name text_styling text_semibold">Ricardo Antwell</div>
                                 <p class="text_styling text_mediumbold text_size-sm">Chief Data Scientist at SuperML Inc.</p>
                                 <p>The head of internal markup teams, responsible for the management of curators, building processes in the company.</p>
@@ -245,7 +263,13 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="team-item">
-                                <div class="team-item__image"><img src="img/content/user-5.jpg" alt=""></div>
+                                <div class="team-item__image">
+                                    <picture> 
+                                        <source srcset="img/content/user-5.webp" type="image/webp"> 
+                                        <source srcset="img/content/user-5.jpg" type="image/jpeg"> 
+                                        <img class="img-fluid" src="img/content/user-5.jpg"  alt=""> 
+                                    </picture>
+                                </div>
                                 <div class="team-item__name text_styling text_semibold">Ricardo Antwell</div>
                                 <p class="text_styling text_mediumbold text_size-sm">Chief Data Scientist at SuperML Inc.</p>
                                 <p>The head of internal markup teams, responsible for the management of curators, building processes in the company.</p>
@@ -253,7 +277,13 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="team-item">
-                                <div class="team-item__image"><img src="img/content/user-5.jpg" alt=""></div>
+                                <div class="team-item__image">
+                                    <picture> 
+                                        <source srcset="img/content/user-5.webp" type="image/webp"> 
+                                        <source srcset="img/content/user-5.jpg" type="image/jpeg"> 
+                                        <img class="img-fluid" src="img/content/user-5.jpg"  alt=""> 
+                                    </picture>
+                                </div>
                                 <div class="team-item__name text_styling text_semibold">Ricardo Antwell</div>
                                 <p class="text_styling text_mediumbold text_size-sm">Chief Data Scientist at SuperML Inc.</p>
                                 <p>The head of internal markup teams, responsible for the management of curators, building processes in the company.</p>
@@ -261,7 +291,13 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="team-item">
-                                <div class="team-item__image"><img src="img/content/user-5.jpg" alt=""></div>
+                                <div class="team-item__image">
+                                    <picture> 
+                                        <source srcset="img/content/user-5.webp" type="image/webp"> 
+                                        <source srcset="img/content/user-5.jpg" type="image/jpeg"> 
+                                        <img class="img-fluid" src="img/content/user-5.jpg"  alt=""> 
+                                    </picture>
+                                </div>
                                 <div class="team-item__name text_styling text_semibold">Ricardo Antwell</div>
                                 <p class="text_styling text_mediumbold text_size-sm">Chief Data Scientist at SuperML Inc.</p>
                                 <p>The head of internal markup teams, responsible for the management of curators, building processes in the company.</p>
@@ -269,7 +305,13 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="team-item">
-                                <div class="team-item__image"><img src="img/content/user-5.jpg" alt=""></div>
+                                <div class="team-item__image">
+                                    <picture> 
+                                        <source srcset="img/content/user-5.webp" type="image/webp"> 
+                                        <source srcset="img/content/user-5.jpg" type="image/jpeg"> 
+                                        <img class="img-fluid" src="img/content/user-5.jpg"  alt=""> 
+                                    </picture>
+                                </div>
                                 <div class="team-item__name text_styling text_semibold">Ricardo Antwell</div>
                                 <p class="text_styling text_mediumbold text_size-sm">Chief Data Scientist at SuperML Inc.</p>
                                 <p>The head of internal markup teams, responsible for the management of curators, building processes in the company.</p>
@@ -277,7 +319,13 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="team-item">
-                                <div class="team-item__image"><img src="img/content/user-5.jpg" alt=""></div>
+                                <div class="team-item__image">
+                                    <picture> 
+                                        <source srcset="img/content/user-5.webp" type="image/webp"> 
+                                        <source srcset="img/content/user-5.jpg" type="image/jpeg"> 
+                                        <img class="img-fluid" src="img/content/user-5.jpg"  alt=""> 
+                                    </picture>
+                                </div>
                                 <div class="team-item__name text_styling text_semibold">Ricardo Antwell</div>
                                 <p class="text_styling text_mediumbold text_size-sm">Chief Data Scientist at SuperML Inc.</p>
                                 <p>The head of internal markup teams, responsible for the management of curators, building processes in the company.</p>
@@ -285,7 +333,13 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="team-item">
-                                <div class="team-item__image"><img src="img/content/user-5.jpg" alt=""></div>
+                                <div class="team-item__image">
+                                    <picture> 
+                                        <source srcset="img/content/user-5.webp" type="image/webp"> 
+                                        <source srcset="img/content/user-5.jpg" type="image/jpeg"> 
+                                        <img class="img-fluid" src="img/content/user-5.jpg"  alt=""> 
+                                    </picture>
+                                </div>
                                 <div class="team-item__name text_styling text_semibold">Ricardo Antwell</div>
                                 <p class="text_styling text_mediumbold text_size-sm">Chief Data Scientist at SuperML Inc.</p>
                                 <p>The head of internal markup teams, responsible for the management of curators, building processes in the company.</p>
