--- a/PyLabel/project.html
+++ b/PyLabel/project.html
@@ -72,7 +72,7 @@
             <div class="container pos-rel">
                 <div class="row">
                     <div class="col-lg-5 col-xl-5">
-                        <a href="index.html" class="logo footer__logo"><img src="img/logo-footer.svg" alt="" class="img-fluid"></a>
+                        <a href="index.html" class="logo footer__logo"><img src="img/logo.svg" alt="" class="img-fluid"></a>
                         <div class="footer__title title text_semibold">Offices</div>
                         <div class="footer__info text_light">
                             <p class="pb-2 pb-md-3">511 Avenue of the Americas, New York, USA, NY 10011</p>
@@ -156,7 +156,7 @@
                                                 <textarea type="text" class="form-control" placeholder="Please describe your project"></textarea>
                                             </div>
                                             <div class="form-group me-xl-3 pe-xl-1">
-                                                <div class="title label">What can we help with? Select *</div>
+                                                <div class="title label">What can we help with? *</div>
                                                 <select class="form-control">
                                                     <option value="Data annotation">Data annotation</option>
                                                     <option value="Data annotation">Data annotation 1</option>
