--- a/PyLabel/сomputer-vision.html
+++ b/PyLabel/сomputer-vision.html
@@ -111,7 +111,13 @@
                 <div class="row row_lg">
                     <div class="col-lg-4">
                         <a href="project.html" class="category-item">
-                            <div class="category-item__image category-item__image_radius"></div>
+                            <div class="category-item__image category-item__image_radius">
+                                <picture> 
+                                    <source srcset="img/content/info-block.webp" type="image/webp"> 
+                                    <source srcset="img/content/info-block.jpg" type="image/jpeg"> 
+                                    <img class="img-fluid" src="img/content/info-block.jpg"  alt=""> 
+                                </picture>
+                            </div>
                             <div class="category-item__body">
                                 <div class="title category-item__title text_semibold">Project 1</div>
                                 <div class="text_size-sm text_mediumbold">We have to come up with some good cases. I think Dima could probably recall some his best cases.</div>
@@ -120,7 +126,13 @@
                     </div>
                     <div class="col-lg-4">
                         <a href="project.html" class="category-item">
-                            <div class="category-item__image category-item__image_radius"></div>
+                            <div class="category-item__image category-item__image_radius">
+                                <picture> 
+                                    <source srcset="img/content/info-block.webp" type="image/webp"> 
+                                    <source srcset="img/content/info-block.jpg" type="image/jpeg"> 
+                                    <img class="img-fluid" src="img/content/info-block.jpg"  alt=""> 
+                                </picture>
+                            </div>
                             <div class="category-item__body">
                                 <div class="title category-item__title text_semibold">Project 2</div>
                                 <div class="text_size-sm text_mediumbold">We have to come up with some good cases. I think Dima could probably recall some his best cases.</div>
@@ -129,7 +141,13 @@
                     </div>
                     <div class="col-lg-4">
                         <a href="project.html" class="category-item">
-                            <div class="category-item__image category-item__image_radius"></div>
+                            <div class="category-item__image category-item__image_radius">
+                                <picture> 
+                                    <source srcset="img/content/info-block.webp" type="image/webp"> 
+                                    <source srcset="img/content/info-block.jpg" type="image/jpeg"> 
+                                    <img class="img-fluid" src="img/content/info-block.jpg"  alt=""> 
+                                </picture>
+                            </div>
                             <div class="category-item__body">
                                 <div class="title category-item__title text_semibold">Project 3</div>
                                 <div class="text_size-sm text_mediumbold">We have to come up with some good cases. I think Dima could probably recall some his best cases.</div>
@@ -379,7 +397,7 @@
                                                 <textarea type="text" class="form-control" placeholder="Please describe your project"></textarea>
                                             </div>
                                             <div class="form-group me-xl-3 pe-xl-1">
-                                                <div class="title label">What can we help with? Select *</div>
+                                                <div class="title label">What can we help with? *</div>
                                                 <select class="form-control">
                                                     <option value="Data annotation">Data annotation</option>
                                                     <option value="Data annotation">Data annotation 1</option>
@@ -413,7 +431,7 @@
             <div class="container pos-rel">
                 <div class="row">
                     <div class="col-lg-5 col-xl-5">
-                        <a href="index.html" class="logo footer__logo"><img src="img/logo-footer.svg" alt="" class="img-fluid"></a>
+                        <a href="index.html" class="logo footer__logo"><img src="img/logo.svg" alt="" class="img-fluid"></a>
                         <div class="footer__title title text_semibold">Offices</div>
                         <div class="footer__info text_light">
                             <p class="pb-2 pb-md-3">511 Avenue of the Americas, New York, USA, NY 10011</p>
@@ -497,7 +515,7 @@
                                                 <textarea type="text" class="form-control" placeholder="Please describe your project"></textarea>
                                             </div>
                                             <div class="form-group me-xl-3 pe-xl-1">
-                                                <div class="title label">What can we help with? Select *</div>
+                                                <div class="title label">What can we help with? *</div>
                                                 <select class="form-control">
                                                     <option value="Data annotation">Data annotation</option>
                                                     <option value="Data annotation">Data annotation 1</option>
