--- a/TDR/index.html
+++ b/TDR/index.html
@@ -120,8 +120,8 @@
         <!-- /advantages -->
         <!-- about -->
         <div class="about">
-            <div class="about__image">
-                <img src="img/about.jpg" alt="" class="img-fluid anim-items anim__showOpacity">
+            <div class="about__image anim-items anim__showOpacity">
+                <img src="img/about.jpg" alt="" class="img-fluid">
                 <img src="img/about-img-1.png" alt="" class="img-fluid about__img-1">
                 <img src="img/about-img-2.png" alt="" class="img-fluid about__img-2">
                 <img src="img/about-img-3.png" alt="" class="img-fluid about__img-3">
