--- a/PyLabel/blog.html
+++ b/PyLabel/blog.html
@@ -45,7 +45,13 @@
                 <div class="title_size-md text_center title title_margin-bottom-lg-mobile">SUCCESSFUL PROJECTS & CASES</div>
                 <!-- blog-item -->
                 <div class="blog-item">
-                    <a href="project.html" class="blog-item__image"></a>
+                    <a href="project.html" class="blog-item__image">
+                        <picture> 
+                            <source srcset="img/content/info-block.webp" type="image/webp"> 
+                            <source srcset="img/content/info-block.jpg" type="image/jpeg"> 
+                            <img class="img-fluid" src="img/content/info-block.jpg"  alt=""> 
+                        </picture>
+                    </a>
                     <div class="blog-item__body">
                         <div class="text_primary text_styling text_normal">Computer vision</div>
                         <div class="title blog-item__title title_size-sm-mobile text_semibold"><a href="project.html">Project 1</a></div>
@@ -56,7 +62,13 @@
                 <!-- /blog-item -->
                 <!-- blog-item -->
                 <div class="blog-item">
-                    <a href="project.html" class="blog-item__image"></a>
+                    <a href="project.html" class="blog-item__image">
+                        <picture> 
+                            <source srcset="img/content/info-block.webp" type="image/webp"> 
+                            <source srcset="img/content/info-block.jpg" type="image/jpeg"> 
+                            <img class="img-fluid" src="img/content/info-block.jpg"  alt=""> 
+                        </picture>
+                    </a>
                     <div class="blog-item__body">
                         <div class="text_primary text_styling text_normal">Data labeling</div>
                         <div class="title blog-item__title title_size-sm-mobile text_semibold"><a href="project.html">Project 2</a></div>
@@ -73,7 +85,7 @@
             <div class="container pos-rel">
                 <div class="row">
                     <div class="col-lg-5 col-xl-5">
-                        <a href="index.html" class="logo footer__logo"><img src="img/logo-footer.svg" alt="" class="img-fluid"></a>
+                        <a href="index.html" class="logo footer__logo"><img src="img/logo.svg" alt="" class="img-fluid"></a>
                         <div class="footer__title title text_semibold">Offices</div>
                         <div class="footer__info text_light">
                             <p class="pb-2 pb-md-3">511 Avenue of the Americas, New York, USA, NY 10011</p>
@@ -157,7 +169,7 @@
                                                 <textarea type="text" class="form-control" placeholder="Please describe your project"></textarea>
                                             </div>
                                             <div class="form-group me-xl-3 pe-xl-1">
-                                                <div class="title label">What can we help with? Select *</div>
+                                                <div class="title label">What can we help with? *</div>
                                                 <select class="form-control">
                                                     <option value="Data annotation">Data annotation</option>
                                                     <option value="Data annotation">Data annotation 1</option>
