--- a/PyLabel/data-labeling.html
+++ b/PyLabel/data-labeling.html
@@ -72,7 +72,7 @@
                             <div class="row  row_xl">
                                 <div class="col-lg-6">
                                     <p class="text_light pb-4">Search for data on the internet</p>
-                                    <div class="collection-section__image pt-md-2"><img src="img/search.png" alt="" class="img-fluid"></div>
+                                    <div class="collection-section__image pt-md-2"><img src="img/search.svg" alt="" class="img-fluid"></div>
                                 </div>
                                 <div class="col-lg-6 ps-xxl-0">
                                     <p class="text_light">Search & filtering of open source datasets</p>
@@ -122,7 +122,13 @@
                 <div class="row row_xl pb-1 pb-md-0">
                     <div class="col-lg-4 col-md-6">
                         <div class="category-item">
-                            <div class="category-item__image"></div>
+                            <div class="category-item__image">
+                                <picture> 
+                                    <source srcset="img/content/info-block.webp" type="image/webp"> 
+                                    <source srcset="img/content/info-block.jpg" type="image/jpeg"> 
+                                    <img class="img-fluid" src="img/content/info-block.jpg"  alt=""> 
+                                </picture>
+                            </div>
                             <div class="title category-item__title title_size-sm-mobile">Images</div>
                             <p class="text_light">From small details of the face to pictures from space</p>
                             <p>Over the years , we have placed more than
@@ -131,7 +137,13 @@
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="category-item">
-                            <div class="category-item__image"></div>
+                            <div class="category-item__image">
+                                <picture> 
+                                    <source srcset="img/content/info-block.webp" type="image/webp"> 
+                                    <source srcset="img/content/info-block.jpg" type="image/jpeg"> 
+                                    <img class="img-fluid" src="img/content/info-block.jpg"  alt=""> 
+                                </picture>
+                            </div>
                             <div class="title category-item__title title_size-sm-mobile">Videos</div>
                             <p class="text_light">Detection of faces in a crowd and any objects in motion</p>
                             <p>We will find an object in motion and track its path, build a motion forecast, and classify it by any parameters.</p>
@@ -139,7 +151,13 @@
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="category-item">
-                            <div class="category-item__image"></div>
+                            <div class="category-item__image">
+                                <picture> 
+                                    <source srcset="img/content/info-block.webp" type="image/webp"> 
+                                    <source srcset="img/content/info-block.jpg" type="image/jpeg"> 
+                                    <img class="img-fluid" src="img/content/info-block.jpg"  alt=""> 
+                                </picture>
+                            </div>
                             <div class="title category-item__title title_size-sm-mobile">Audio</div>
                             <p class="text_light">Bots, voice assistants and phonetics</p>
                             <p>We will arrange accents and punctuation, decipher children's speech and bad pronunciation, and transcribe audio recordings.</p>
@@ -147,7 +165,13 @@
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="category-item">
-                            <div class="category-item__image"></div>
+                            <div class="category-item__image">
+                                <picture> 
+                                    <source srcset="img/content/info-block.webp" type="image/webp"> 
+                                    <source srcset="img/content/info-block.jpg" type="image/jpeg"> 
+                                    <img class="img-fluid" src="img/content/info-block.jpg"  alt=""> 
+                                </picture>
+                            </div>
                             <div class="title category-item__title title_size-sm-mobile">Lidar Data</div>
                             <p class="text_light">Abstract of 3D models, maps and the environment</p>
                             <p>Let's define the boundaries of the object in space, track its track and build a forecast of movement using cuboids and tags.</p>
@@ -155,7 +179,13 @@
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="category-item">
-                            <div class="category-item__image"></div>
+                            <div class="category-item__image">
+                                <picture> 
+                                    <source srcset="img/content/info-block.webp" type="image/webp"> 
+                                    <source srcset="img/content/info-block.jpg" type="image/jpeg"> 
+                                    <img class="img-fluid" src="img/content/info-block.jpg"  alt=""> 
+                                </picture>
+                            </div>
                             <div class="title category-item__title title_size-sm-mobile">Text</div>
                             <p class="text_light">Computer and handwritten text in 30+ languages</p>
                             <p>We recognize the language and translate the text for processing, assemble, structure and classify the text for the task.</p>
@@ -163,7 +193,13 @@
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="category-item">
-                            <div class="category-item__image"></div>
+                            <div class="category-item__image">
+                                <picture> 
+                                    <source srcset="img/content/info-block.webp" type="image/webp"> 
+                                    <source srcset="img/content/info-block.jpg" type="image/jpeg"> 
+                                    <img class="img-fluid" src="img/content/info-block.jpg"  alt=""> 
+                                </picture>
+                            </div>
                             <div class="title category-item__title title_size-sm-mobile">Healthcare Data</div>
                             <p class="text_light">Marking of all types of medical data from dental crowns to MRI images</p>
                             <p>We cooperate with doctors, dentists and federal health centers in many countries of the world.</p>
@@ -235,42 +271,78 @@
                 <div class="row row_xl">
                     <div class="col-lg-4 col-md-6">
                         <div class="category-item category-item_margin">
-                            <div class="category-item__image"></div>
+                            <div class="category-item__image">
+                                <picture> 
+                                    <source srcset="img/content/info-block.webp" type="image/webp"> 
+                                    <source srcset="img/content/info-block.jpg" type="image/jpeg"> 
+                                    <img class="img-fluid" src="img/content/info-block.jpg"  alt=""> 
+                                </picture>
+                            </div>
                             <div class="title category-item__title title_size-sm-mobile">E-commerce</div>
                             <p class="text_light">Something from copywriter</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="category-item category-item_margin">
-                            <div class="category-item__image"></div>
+                            <div class="category-item__image">
+                                <picture> 
+                                    <source srcset="img/content/info-block.webp" type="image/webp"> 
+                                    <source srcset="img/content/info-block.jpg" type="image/jpeg"> 
+                                    <img class="img-fluid" src="img/content/info-block.jpg"  alt=""> 
+                                </picture>
+                            </div>
                             <div class="title category-item__title title_size-sm-mobile">AR / VR</div>
                             <p class="text_light">Something from copywriter</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="category-item category-item_margin">
-                            <div class="category-item__image"></div>
+                            <div class="category-item__image">
+                                <picture> 
+                                    <source srcset="img/content/info-block.webp" type="image/webp"> 
+                                    <source srcset="img/content/info-block.jpg" type="image/jpeg"> 
+                                    <img class="img-fluid" src="img/content/info-block.jpg"  alt=""> 
+                                </picture>
+                            </div>
                             <div class="title category-item__title title_size-sm-mobile">Fintech</div>
                             <p class="text_light">Something from copywriter</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="category-item category-item_margin">
-                            <div class="category-item__image"></div>
+                            <div class="category-item__image">
+                                <picture> 
+                                    <source srcset="img/content/info-block.webp" type="image/webp"> 
+                                    <source srcset="img/content/info-block.jpg" type="image/jpeg"> 
+                                    <img class="img-fluid" src="img/content/info-block.jpg"  alt=""> 
+                                </picture>
+                            </div>
                             <div class="title category-item__title title_size-sm-mobile">Healthcare</div>
                             <p class="text_light">Something from copywriter</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="category-item category-item_margin">
-                            <div class="category-item__image"></div>
+                            <div class="category-item__image">
+                                <picture> 
+                                    <source srcset="img/content/info-block.webp" type="image/webp"> 
+                                    <source srcset="img/content/info-block.jpg" type="image/jpeg"> 
+                                    <img class="img-fluid" src="img/content/info-block.jpg"  alt=""> 
+                                </picture>
+                            </div>
                             <div class="title category-item__title title_size-sm-mobile">Urbanistics</div>
                             <p class="text_light">Something from copywriter</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="category-item category-item_margin">
-                            <div class="category-item__image"></div>
+                            <div class="category-item__image">
+                                <picture> 
+                                    <source srcset="img/content/info-block.webp" type="image/webp"> 
+                                    <source srcset="img/content/info-block.jpg" type="image/jpeg"> 
+                                    <img class="img-fluid" src="img/content/info-block.jpg"  alt=""> 
+                                </picture>
+                            </div>
                             <div class="title category-item__title title_size-sm-mobile">Agriculture</div>
                             <p class="text_light">Something from copywriter</p>
                         </div>
@@ -469,7 +541,13 @@
                 <div class="row row_lg pt-1">
                     <div class="col-lg-4">
                         <a href="project.html" class="category-item">
-                            <div class="category-item__image category-item__image_radius"></div>
+                            <div class="category-item__image category-item__image_radius">
+                                <picture> 
+                                    <source srcset="img/content/info-block.webp" type="image/webp"> 
+                                    <source srcset="img/content/info-block.jpg" type="image/jpeg"> 
+                                    <img class="img-fluid" src="img/content/info-block.jpg"  alt=""> 
+                                </picture>
+                            </div>
                             <div class="category-item__body">
                                 <div class="title category-item__title text_semibold">Topic name</div>
                                 <div class="text_size-sm text_mediumbold">We have to come up with some good cases. I think Dima could probably recall some his best cases.</div>
@@ -478,7 +556,13 @@
                     </div>
                     <div class="col-lg-4">
                         <a href="project.html" class="category-item">
-                            <div class="category-item__image category-item__image_radius"></div>
+                            <div class="category-item__image category-item__image_radius">
+                                <picture> 
+                                    <source srcset="img/content/info-block.webp" type="image/webp"> 
+                                    <source srcset="img/content/info-block.jpg" type="image/jpeg"> 
+                                    <img class="img-fluid" src="img/content/info-block.jpg"  alt=""> 
+                                </picture>
+                            </div>
                             <div class="category-item__body">
                                 <div class="title category-item__title text_semibold">Topic name</div>
                                 <div class="text_size-sm text_mediumbold">We have to come up with some good cases. I think Dima could probably recall some his best cases.</div>
@@ -487,7 +571,13 @@
                     </div>
                     <div class="col-lg-4">
                         <a href="project.html" class="category-item">
-                            <div class="category-item__image category-item__image_radius"></div>
+                            <div class="category-item__image category-item__image_radius">
+                                <picture> 
+                                    <source srcset="img/content/info-block.webp" type="image/webp"> 
+                                    <source srcset="img/content/info-block.jpg" type="image/jpeg"> 
+                                    <img class="img-fluid" src="img/content/info-block.jpg"  alt=""> 
+                                </picture>
+                            </div>
                             <div class="category-item__body">
                                 <div class="title category-item__title text_semibold">Topic name</div>
                                 <div class="text_size-sm text_mediumbold">We have to come up with some good cases. I think Dima could probably recall some his best cases.</div>
@@ -527,7 +617,7 @@
                                                 <textarea type="text" class="form-control" placeholder="Please describe your project"></textarea>
                                             </div>
                                             <div class="form-group me-xl-3 pe-xl-1">
-                                                <div class="title label">What can we help with? Select *</div>
+                                                <div class="title label">What can we help with? *</div>
                                                 <select class="form-control">
                                                     <option value="Data annotation">Data annotation</option>
                                                     <option value="Data annotation">Data annotation 1</option>
@@ -561,7 +651,7 @@
             <div class="container pos-rel">
                 <div class="row">
                     <div class="col-lg-5 col-xl-5">
-                        <a href="index.html" class="logo footer__logo"><img src="img/logo-footer.svg" alt="" class="img-fluid"></a>
+                        <a href="index.html" class="logo footer__logo"><img src="img/logo.svg" alt="" class="img-fluid"></a>
                         <div class="footer__title title text_semibold">Offices</div>
                         <div class="footer__info text_light">
                             <p class="pb-2 pb-md-3">511 Avenue of the Americas, New York, USA, NY 10011</p>
@@ -645,7 +735,7 @@
                                                 <textarea type="text" class="form-control" placeholder="Please describe your project"></textarea>
                                             </div>
                                             <div class="form-group me-xl-3 pe-xl-1">
-                                                <div class="title label">What can we help with? Select *</div>
+                                                <div class="title label">What can we help with? *</div>
                                                 <select class="form-control">
                                                     <option value="Data annotation">Data annotation</option>
                                                     <option value="Data annotation">Data annotation 1</option>
