--- a/TDR/index.html
+++ b/TDR/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Deeplink Agency</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/favicon.png">
@@ -22,7 +22,7 @@
                     <nav class="nav" id="nav">
                         <ul class="nav-list">
                             <li class="nav-list__item"><a href="#" class="nav-list__link">Услуги</a></li>
-                            <li class="nav-list__item"><a href="https://t.me/da_apps_support" class="nav-list__link">Контакты</a></li>
+                            <li class="nav-list__item"><a href="https://t.me/da_apps_support" class="nav-list__link" target="_blank">Контакты</a></li>
                             <li class="nav-list__item dropdown">
                                 <a href="#" class="nav-list__link nav-list__link_btn" data-bs-toggle="dropdown">Личный Кабинет</a>
                                 <div class="dropdown-menu noclose">
@@ -43,6 +43,7 @@
                                 </div>
                             </li>
                         </ul>
+                        <a href="#" class="close-menu"></a>
                     </nav>
                     <a href="#" class="btn-menu">
                         <span class="btn-menu__line"></span>
