--- a/TDR/index.html
+++ b/TDR/index.html
@@ -66,7 +66,7 @@
                 </div>
             </div>
             <div class="preview__image">
-                <img src="img/preview.png" alt="" class="img-fluid anim-items anim__showOpacity">
+                <img src="img/preview.png" alt="" class="img-fluid">
                 <div class="preview__slot anim-items anim__showOpacity">
                     <img src="img/slot.png" alt="" class="img-fluid">
                 </div>
