--- a/TDR/index.html
+++ b/TDR/index.html
@@ -135,7 +135,7 @@
                     </div>
                     <div class="about-item">
                         <div class="about-item__image about-item__image_blue"><img src="img/about-1.png" alt="" class="img-fluid"></div>
-                        <div class="about-item__text text_size-md">НАТИВНЫЕ ПУШИ ПОД ВСЕ ГЕО</div>
+                        <div class="about-item__text">НАТИВНЫЕ ПУШИ ПОД ВСЕ ГЕО</div>
                     </div>
                     <div class="about-item">
                         <div class="about-item__image about-item__image_yellow"><img src="img/about-2.png" alt="" class="img-fluid"></div>
