--- a/promo/index.html
+++ b/promo/index.html
@@ -69,14 +69,14 @@
                 <li><a href="Ardesto-9-ru/index.html">Ardesto-9-ru</a></li>
                 <li><a href="Bosch-1/index.html">Bosch-1</a></li>
                 <li><a href="Bosch-1-ru/index.html">Bosch-1-ru</a></li>
-                <li><a href="Bosch-2/index.html">Bosch-2</a></li>
+                <!-- <li><a href="Bosch-2/index.html">Bosch-2</a></li>
                 <li><a href="Bosch-2-ru/index.html">Bosch-2-ru</a></li>
                 <li><a href="Bosch-3/index.html">Bosch-3</a></li>
                 <li><a href="Bosch-3-ru/index.html">Bosch-3-ru</a></li>
                 <li><a href="Bosch-4/index.html">Bosch-4</a></li>
                 <li><a href="Bosch-4-ru/index.html">Bosch-4-ru</a></li>
                 <li><a href="Bosch-5/index.html">Bosch-5</a></li>
-                <li><a href="Bosch-5-ru/index.html">Bosch-5-ru</a></li>
+                <li><a href="Bosch-5-ru/index.html">Bosch-5-ru</a></li> -->
             </ul>
         </div>
     </div>
