--- a/promo/index.html
+++ b/promo/index.html
@@ -49,7 +49,7 @@
                 <li><a href="Varmilo-Sakura-R2-14/index.html">Varmilo-Sakura-R2-14</a></li>
                 <li><a href="Varmilo-Sakura-R2-15/index.html">Varmilo-Sakura-R2-15</a></li>
                 <li><a href="Varmilo-Sakura-R2-16/index.html">Varmilo-Sakura-R2-16</a></li>
-                <li><a href="Ardesto/index.html">Ardesto</a></li>
+                <li><a href="Ardesto-1/index.html">Ardesto-1</a></li>
                 <li><a href="Ardesto-1-ru/index.html">Ardesto-1-ru</a></li>
                 <li><a href="Ardesto-2/index.html">Ardesto-2</a></li>
                 <li><a href="Ardesto-2-ru/index.html">Ardesto-2-ru</a></li>
